tests/fixtures/LatestTests/VariableDeclarationTests/errors/bool_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int = true

